# maikyno_player

./: meson.build  run.sh
src/: audio.c  clock.c  clock.h  decode.c  frame_queue.c  frame_queue.h  meson.build  mkp.c  mkp.h  os.h  packet_queue.c  packet_queue.h  read_thread.c
src/app/: main.c  meson.build
src/includes/libmkp/: mkp.h  mkplayer.h
src/thread/: thread.h  unix.h  windows.h
